add image lazy-loading

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       </header>
       <main>
         <div class="library" id="template">
-          <img src="{preview}" alt="{name}" />
+          <img data-src="{preview}" alt="{name}" class="lazy" />
           <h2>{name} <a aria-label="Anchor" href="#{libraryId}">#</a></h2>
           <p class="authors">{authors}</p>
           <p class="downloads">
