fix: instruction link to updated section

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <p>
           Follow the
           <a
-            href="https://github.com/excalidraw/excalidraw-libs#add-your-own-library-to-the-list"
+            href="https://github.com/excalidraw/excalidraw-libs#create-your-own-library"
             >instructions</a
           >
           if you want to <strong>add your own library</strong> into this list.
